--- a/YouBikeAPI/appsettings.Development.json
+++ b/YouBikeAPI/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "DbContext": {
+    "ConnectionString": "Server=localhost; Database=YouBikeDb; User Id=sa; Password=PaSSword12!;"
+  },
+  "Authentication": {
+    "SecretKey": "ThisIsAVerySecretKey",
+    "Issuer": "XX.com",
+    "Audience": "XX.com"
   }
 }
